# halo2-examples

./: Cargo.toml  README.md
src/: fibonacci.rs  lib.rs  range_check.rs  vm.rs
src/fibonacci/: example1_n.rs
src/range_check/: decompose.rs  example3_broken.rs
src/vm/: div.rs  mem.rs  mul.rs  u32.rs
vm/: Cargo.toml
vm/src/: div.rs  lib.rs  mem.rs  mem_lookup.rs  mul.rs  u32.rs
